--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 Obviously, none of us can understand what pigeons are saying, so we'll just make up some subtitles! Create your own time stamps and invent your own dialog!
             </p>
             <video controls><source src="./assets/videos/pigeons-in-love.mp4">
-            <track src="./assets/text-tracks/pigeons-in-love-english.vtt" kind="subtitles" srclang="fr" label="French Subtitles"/>
+            <track src="./assets/text-tracks/pigeons-in-love-english.vtt" kind="subtitles" srclang="French" label="French Subtitles"/>
             </video><!-- TODO: Put the pigeons in love MP4 video here-->
             <!-- This video should have controls and two track tags (for example, for English AND French subtitles) -->
         </div>
